07_TAD_opaco/ex_PET/Resultados/Joao/time/result_compilation.txt
time.c:11:5: error: two or more data types in declaration specifiers
   11 |     char nome[MAX_TIME_NOME];
      |     ^~~~
time.c:11:10: error: array type has incomplete element type ‘struct _Time’
   11 |     char nome[MAX_TIME_NOME];
      |          ^~~~
time.c:19:1: error: expected identifier or ‘(’ before ‘}’ token
   19 | }
      | ^
time.c: In function ‘LeTime’:
time.c:27:30: error: invalid application of ‘sizeof’ to incomplete type ‘tTime’ {aka ‘struct _Time’}
   27 |     tTime *t = malloc(sizeof(tTime));
      |                              ^~~~~
time.c:29:24: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   29 |     scanf("%[^\n]\n", t->nome);
      |                        ^~
time.c:31:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   31 |     t->vitorias = 0;
      |      ^~
time.c:32:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   32 |     t->partidas = 0;
      |      ^~
time.c:33:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   33 |     t->derrotas = 0;
      |      ^~
time.c:34:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   34 |     t->empates = 0;
      |      ^~
time.c:35:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   35 |     t->gol_feito = 0;
      |      ^~
time.c:36:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   36 |     t->gol_adv = 0;
      |      ^~
time.c:37:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   37 |     t->saldo = 0;
      |      ^~
time.c: In function ‘ObtemVitorias’:
time.c:47:13: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   47 |     return t->vitorias;
      |             ^~
time.c: In function ‘ObtemPartidas’:
time.c:55:13: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   55 |     return t->partidas;
      |             ^~
time.c: In function ‘ObtemDerrotas’:
time.c:63:13: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   63 |     return t->derrotas;
      |             ^~
time.c: In function ‘ObtemNomeTime’:
time.c:71:13: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   71 |     return t->nome;
      |             ^~
time.c: In function ‘ObtemSaldo’:
time.c:79:13: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   79 |     return t->saldo;
      |             ^~
time.c: In function ‘AtualizaVitorias’:
time.c:87:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   87 |     t->vitorias++;
      |      ^~
time.c: In function ‘AtualizaEmpates’:
time.c:95:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
   95 |     t->empates++;
      |      ^~
time.c: In function ‘AtualizaDerrotas’:
time.c:103:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
  103 |     t->derrotas++;
      |      ^~
time.c: In function ‘AtualizaGolsMarcados’:
time.c:111:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
  111 |     t->gol_feito += gols;
      |      ^~
time.c:112:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
  112 |     t->saldo += gols;
      |      ^~
time.c: In function ‘AtualizaGolsSofridos’:
time.c:120:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
  120 |     t->gol_adv += gols;
      |      ^~
time.c:121:6: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
  121 |     t->saldo -= gols;
      |      ^~
time.c: In function ‘ObtemPontos’:
time.c:130:38: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
  130 |     return (ObtemVitorias(t) * 3) + t->empates;
      |                                      ^~
time.c: In function ‘ImprimeTime’:
time.c:167:60: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
  167 |     printf("%-12s | %02d | %02d | %02d | %02d | %+03d\n", t->nome, ObtemPontos(t), t->vitorias, t->derrotas, t->empates, ObtemSaldo(t));
      |                                                            ^~
time.c:167:85: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
  167 |     printf("%-12s | %02d | %02d | %02d | %02d | %+03d\n", t->nome, ObtemPontos(t), t->vitorias, t->derrotas, t->empates, ObtemSaldo(t));
      |                                                                                     ^~
time.c:167:98: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
  167 |     printf("%-12s | %02d | %02d | %02d | %02d | %+03d\n", t->nome, ObtemPontos(t), t->vitorias, t->derrotas, t->empates, ObtemSaldo(t));
      |                                                                                                  ^~
time.c:167:111: error: invalid use of incomplete typedef ‘tTime’ {aka ‘struct _Time’}
  167 |     printf("%-12s | %02d | %02d | %02d | %02d | %+03d\n", t->nome, ObtemPontos(t), t->vitorias, t->derrotas, t->empates, ObtemSaldo(t));
      |                                                                                                               ^~
time.c: In function ‘ObtemVitorias’:
time.c:48:1: warning: control reaches end of non-void function [-Wreturn-type]
   48 | }
      | ^
time.c: In function ‘ObtemPartidas’:
time.c:56:1: warning: control reaches end of non-void function [-Wreturn-type]
   56 | }
      | ^
time.c: In function ‘ObtemDerrotas’:
time.c:64:1: warning: control reaches end of non-void function [-Wreturn-type]
   64 | }
      | ^
time.c: In function ‘ObtemNomeTime’:
time.c:72:1: warning: control reaches end of non-void function [-Wreturn-type]
   72 | }
      | ^
time.c: In function ‘ObtemSaldo’:
time.c:80:1: warning: control reaches end of non-void function [-Wreturn-type]
   80 | }
      | ^
time.c: In function ‘ObtemPontos’:
time.c:131:1: warning: control reaches end of non-void function [-Wreturn-type]
  131 | };
      | ^
